--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     ]
   },
   "devDependencies": {
+    "typescript": "^4.3.2",
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.9",
+    "@types/react-dom": "^17.0.6",
     "json-server": "^0.16.3"
   }
 }
